@@ -1,5 +1,11 @@
 2008-10-06  Richard Hult  <richard@imendio.com>
 
+	* data/assistant.js: 
+	* data/assistant.css: Improve the style and handle libxml's API
+	docs a bit better.
+
+2008-10-06  Richard Hult  <richard@imendio.com>
+
 	* misc/devhelp.el: Add function that uses the assistant.
 
 2008-10-05  Richard Hult  <richard@imendio.com>
